Bug 1370594: TOC stays collapsed until 1400px (#4271)
Fix Bug 1370594, toc stays collapsed until 1400px

--- a/kuma/static/styles/components/wiki/structure.scss
+++ b/kuma/static/styles/components/wiki/structure.scss
@@ -45,7 +45,7 @@
     }
 }
 
-@media #{$media-query-small-desktop} {
+@media #{$mq-large-desktop-and-down} {
 
     /* when there's a left sidebar, we need to adjust the layout to look like:  |= */
     .wiki-left-present:not(.wiki-left-closed) {
